Fix mobile spacing/sizing.

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,7 @@ body {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 3.6em;
 }
 
 h2 {
